WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81665
[GTK] icon database requests not dispatched until new data arrives
https://bugs.webkit.org/show_bug.cgi?id=81665
Summary
[GTK] icon database requests not dispatched until new data arrives
Claudio Saavedra
Reported
2012-03-20 08:17:02 PDT
Apply this patch
http://fpaste.org/I0hD/
to ephy master (rev. 5343bd) and you'll notice the following: 1. Opening ephy's history window (ctrl+ h) will show the list of hosts (in the left window) without any icons. 2. Without closing the history window, load any webpage (hopefully with favicon). 3. The icons will be loaded now. Apparently the favicon requests done with webkit_favicon_database_get_favicon_pixbuf() are not dispatched until new data arrives in the database.
Attachments
Patch
(3.05 KB, patch)
2012-03-22 05:13 PDT
,
Sergio Villar Senin
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2012-03-22 05:13:29 PDT
Created
attachment 133226
[details]
Patch
Martin Robinson
Comment 2
2012-03-22 07:37:21 PDT
Comment on
attachment 133226
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=133226&action=review
Okay. Please add this commit id to the 1.8 wiki page. One comment could be slightly cleaned up, I think.
> Source/WebKit/gtk/webkit/webkitfavicondatabase.cpp:543 > + // By asking for the icon directly: > + // 1- if we don't get the icon data now, we'll get notified about it later (even if the initial import is not finished yet). > + // 2- if we get the icon data now, then success.
Perhaps you could make this slightly more concise: We ask for the icon directly. If we don't get the icon data now, we'll be notified later (even if the database is still importing icons).
Sergio Villar Senin
Comment 3
2012-03-22 08:05:57 PDT
Committed
r111698
: <
http://trac.webkit.org/changeset/111698
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug