ephy-history-window: add back the favicons

Use the new webkit favicon database for favicons here. This
might not work perfectly, but that's a webkitgtk issue, see
https://bugs.webkit.org/show_bug.cgi?id=81665

https://bugzilla.gnome.org/show_bug.cgi?id=672480